Co-authored-by: arisharma43 <arisharma43@users.noreply.github.com>

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -62,7 +62,7 @@ ul {
   <textarea name="message" style="width:600px; height:600px;"></textarea>
   <form action="/action_page.php">
   </fieldset> 
-    <input type='button'>Submit</input>
+    <input type='button' value='Submit'></input>
 </form>
 
   
