Co-authored-by: arisharma43 <arisharma43@users.noreply.github.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,10 +75,10 @@
     {{unsplash_results}}
     <br />
    --->
-    Open AI:
+
     {{api_response|safe}}
     <br />
-    <iframe width='1570px' height='1000px' src="/output.html">
+    <iframe width='1570px' height='1000px' src="completeName.txt">
     </iframe>
 
     <!-- <iframe src="file//Users/anthony/Documents/py-1/output.html" height="200" width="300" title="Iframe Example"></iframe> -->
