Co-authored-by: arisharma43 <arisharma43@users.noreply.github.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,9 +76,9 @@
     <br />
    --->
 
-    {{api_response|safe}}
+    <!--{{api_response|safe}}-->
     <br />
-    <iframe width='1570px' height='1000px' src="completeName.txt">
+    <iframe width='1570px' height='1000px' src="/output/output.html">
     </iframe>
 
     <!-- <iframe src="file//Users/anthony/Documents/py-1/output.html" height="200" width="300" title="Iframe Example"></iframe> -->
